// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content reducer should handle ADD_DETAILS 1`] = `
Object {
  "details": Object {},
  "genres_array": Array [],
  "isInitialisated": false,
  "page": 0,
  "results": Array [],
  "total_pages": 0,
  "total_results": 0,
  "video_url": "",
}
`;

exports[`content reducer should handle ADD_GENRES 1`] = `
Object {
  "details": Object {},
  "genres_array": Array [
    Object {
      "id": 13,
      "name": "Adventure",
    },
    Object {
      "id": 18,
      "name": "Drama",
    },
    Object {
      "id": 20,
      "name": "Family",
    },
    Object {
      "id": 21,
      "name": "Fantasy",
    },
  ],
  "isInitialisated": false,
  "page": 0,
  "results": Array [],
  "total_pages": 0,
  "total_results": 0,
  "video_url": "",
}
`;

exports[`content reducer should handle ADD_ITEMS 1`] = `
Object {
  "details": Object {},
  "genres_array": Array [],
  "isInitialisated": false,
  "page": 1,
  "results": Array [],
  "total_pages": 12,
  "total_results": 55,
  "video_url": "",
}
`;

exports[`content reducer should handle ADD_VIDEO 1`] = `
Object {
  "details": Object {},
  "genres_array": Array [],
  "isInitialisated": false,
  "page": 0,
  "results": Array [],
  "total_pages": 0,
  "total_results": 0,
  "video_url": "test_url",
}
`;

exports[`content reducer should handle INITIALISATION 1`] = `
Object {
  "details": Object {},
  "genres_array": Array [],
  "isInitialisated": true,
  "page": 0,
  "results": Array [],
  "total_pages": 0,
  "total_results": 0,
  "video_url": "",
}
`;

exports[`content reducer should return the initial state 1`] = `
Object {
  "details": Object {},
  "genres_array": Array [],
  "isInitialisated": false,
  "page": 0,
  "results": Array [],
  "total_pages": 0,
  "total_results": 0,
  "video_url": "",
}
`;
